Force a scroll bar for the file list, as it was getting too long. Reverse the file list, so drafts are at the top. Attempt to stop the wrong format of playlist being entered.

--- a/core/src/main/static/editor.css
+++ b/core/src/main/static/editor.css
@@ -35,6 +35,12 @@ figcaption {
 	cursor: pointer;
 }
 
+#file-list {
+	max-height: 300px;
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+
 /*  image gallery upload */
 #image-upload-drop-area {
 	border: 2px dashed #ccc;
